refactor : button alignment

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,8 @@
             android:layout_height="wrap_content"
             android:gravity="end"
             android:orientation="vertical"
-            android:paddingHorizontal="16dp"
+            android:paddingHorizontal="24dp"
+            app:layout_constraintVertical_bias="0.90"
             app:layout_constraintBottom_toTopOf="@id/view"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/textinput_placeholder">
@@ -39,8 +40,8 @@
                 android:id="@+id/previous"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
                 android:layout_weight="1"
+                android:fontFamily="@font/doppioone_regular"
                 android:textColor="#55423866"
                 android:textSize="20sp" />
 
@@ -49,9 +50,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:layout_marginBottom="20dp"
                 android:layout_weight="1"
                 android:text="@string/_0"
+                android:fontFamily="@font/doppioone_regular"
                 android:textColor="#554238"
                 android:textSize="36.sp" />
 
@@ -62,13 +63,13 @@
             android:layout_width="40dp"
             android:layout_height="4dp"
             android:layout_gravity="center"
+            android:layout_marginBottom="12dp"
             android:background="@drawable/drag_handle"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/back"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.380" />
+            app:layout_constraintTop_toBottomOf="@id/textinput_placeholder" />
 
         <Button
             android:id="@+id/devide"
@@ -80,6 +81,7 @@
             android:clickable="true"
             android:gravity="center"
             android:text="@string/divison"
+            android:fontFamily="@font/doppioone_regular"
             app:layout_constraintBottom_toTopOf="@id/times"
             app:layout_constraintEnd_toEndOf="@+id/times"
             app:layout_constraintStart_toStartOf="@+id/times" />
@@ -96,6 +98,7 @@
             android:gravity="center"
             android:onClick="onClickNumber"
             android:text="@string/remainder"
+            android:fontFamily="@font/doppioone_regular"
             app:layout_constraintBottom_toTopOf="@id/no_nine"
             app:layout_constraintEnd_toEndOf="@+id/no_nine"
             app:layout_constraintStart_toStartOf="@+id/no_nine" />
@@ -125,6 +128,7 @@
             android:gravity="center"
             android:padding="4dp"
             android:text="@string/ac"
+            android:fontFamily="@font/doppioone_regular"
             app:layout_constraintBottom_toTopOf="@id/no_seven"
             app:layout_constraintEnd_toEndOf="@+id/no_seven"
             app:layout_constraintStart_toStartOf="@+id/no_seven"
@@ -141,6 +145,7 @@
             android:clickable="true"
             android:gravity="center"
             android:text="@string/x"
+            android:fontFamily="@font/doppioone_regular"
             app:layout_constraintBottom_toTopOf="@id/plus"
             app:layout_constraintEnd_toEndOf="@+id/plus"
             app:layout_constraintStart_toStartOf="@+id/plus" />
@@ -156,6 +161,7 @@
             android:gravity="center"
             android:onClick="onClickNumber"
             android:text="@string/_9"
+            android:fontFamily="@font/doppioone_regular"
             app:layout_constraintEnd_toEndOf="@+id/no_six"
             app:layout_constraintStart_toStartOf="@+id/no_six"
             app:layout_constraintTop_toBottomOf="@id/reminder" />
@@ -171,6 +177,7 @@
             android:gravity="center"
             android:onClick="onClickNumber"
             android:text="@string/_8"
+            android:fontFamily="@font/doppioone_regular"
             app:layout_constraintEnd_toEndOf="@+id/no_five"
             app:layout_constraintStart_toStartOf="@+id/no_five"
             app:layout_constraintTop_toBottomOf="@id/back" />
@@ -186,6 +193,7 @@
             android:gravity="center"
             android:onClick="onClickNumber"
             android:text="@string/_7"
+            android:fontFamily="@font/doppioone_regular"
             app:layout_constraintEnd_toEndOf="@+id/no_four"
             app:layout_constraintStart_toStartOf="@+id/no_four"
             app:layout_constraintTop_toBottomOf="@id/clear" />
@@ -196,13 +204,13 @@
             android:layout_width="76dp"
             android:layout_height="76dp"
             android:layout_marginVertical="4dp"
-            android:layout_marginTop="36dp"
             android:background="@drawable/operation_background"
             android:clickable="true"
             android:gravity="center"
             android:text="@string/plus"
+            android:fontFamily="@font/doppioone_regular"
             app:layout_constraintBottom_toTopOf="@id/minus"
-            app:layout_constraintEnd_toEndOf="@+id/times"
+            app:layout_constraintEnd_toEndOf="@+id/minus"
             app:layout_constraintStart_toStartOf="@id/minus"
             app:layout_constraintTop_toBottomOf="@id/minus" />
 
@@ -211,13 +219,13 @@
             style="@style/btn_background"
             android:layout_width="76dp"
             android:layout_height="76dp"
-            android:layout_marginVertical="4dp"
             android:layout_marginTop="4dp"
             android:background="@drawable/button_background"
             android:clickable="true"
             android:gravity="center"
             android:onClick="onClickNumber"
             android:text="@string/_4"
+            android:fontFamily="@font/doppioone_regular"
             app:layout_constraintBottom_toTopOf="@id/no_one"
             app:layout_constraintEnd_toEndOf="@+id/no_one"
             app:layout_constraintStart_toStartOf="@id/no_one"
@@ -235,6 +243,7 @@
             android:gravity="center"
             android:onClick="onClickNumber"
             android:text="@string/_5"
+            android:fontFamily="@font/doppioone_regular"
             app:layout_constraintBottom_toTopOf="@id/no_tow"
             app:layout_constraintEnd_toEndOf="@+id/no_tow"
             app:layout_constraintStart_toStartOf="@id/no_tow"
@@ -252,6 +261,7 @@
             android:gravity="center"
             android:onClick="onClickNumber"
             android:text="@string/_6"
+            android:fontFamily="@font/doppioone_regular"
             app:layout_constraintBottom_toTopOf="@id/no_three"
             app:layout_constraintEnd_toEndOf="@+id/no_three"
             app:layout_constraintStart_toStartOf="@+id/no_three"
@@ -266,6 +276,7 @@
             android:clickable="true"
             android:gravity="center"
             android:text="@string/minus"
+            android:fontFamily="@font/doppioone_regular"
             app:layout_constraintBottom_toBottomOf="@id/equal"
             app:layout_constraintEnd_toEndOf="@+id/equal"
             app:layout_constraintStart_toStartOf="@id/equal"
@@ -281,6 +292,7 @@
             android:gravity="center"
             android:onClick="onClickNumber"
             android:text="@string/_3"
+            android:fontFamily="@font/doppioone_regular"
             app:layout_constraintBottom_toBottomOf="@id/dot"
             app:layout_constraintEnd_toEndOf="@+id/dot"
             app:layout_constraintStart_toStartOf="@+id/dot"
@@ -296,6 +308,7 @@
             android:gravity="center"
             android:onClick="onClickNumber"
             android:text="@string/_2"
+            android:fontFamily="@font/doppioone_regular"
             app:layout_constraintBottom_toBottomOf="@id/no_zero"
             app:layout_constraintEnd_toEndOf="@+id/no_zero"
             app:layout_constraintStart_toStartOf="@id/no_zero"
@@ -311,6 +324,7 @@
             android:gravity="center"
             android:onClick="onClickNumber"
             android:text="@string/_1"
+            android:fontFamily="@font/doppioone_regular"
             app:layout_constraintBottom_toBottomOf="@id/minus_plus"
             app:layout_constraintEnd_toEndOf="@+id/minus_plus"
             app:layout_constraintStart_toStartOf="@id/minus_plus"
@@ -326,6 +340,7 @@
             android:background="@drawable/operation_background"
             android:gravity="center"
             android:text="@string/equal"
+            android:fontFamily="@font/doppioone_regular"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/dot"
@@ -341,6 +356,7 @@
             android:gravity="center"
             android:onClick="onClickNumber"
             android:text="@string/dot"
+            android:fontFamily="@font/doppioone_regular"
             app:layout_constraintBottom_toBottomOf="@id/equal"
             app:layout_constraintEnd_toStartOf="@id/equal"
             app:layout_constraintStart_toEndOf="@id/no_zero"
@@ -357,6 +373,7 @@
             android:gravity="center"
             android:onClick="onClickNumber"
             android:text="@string/_0"
+            android:fontFamily="@font/doppioone_regular"
             app:layout_constraintBottom_toBottomOf="@id/equal"
             app:layout_constraintEnd_toStartOf="@id/dot"
             app:layout_constraintStart_toEndOf="@id/minus_plus"
@@ -371,6 +388,7 @@
             android:background="@drawable/button_background"
             android:clickable="true"
             android:gravity="center"
+            android:fontFamily="@font/doppioone_regular"
             android:onClick="onClickNumber"
             android:text="@string/plus_minus"
             app:layout_constraintBottom_toBottomOf="@id/equal"
